syntax = "proto3";

package auth;

option go_package = "auth-service/pkg/generated/auth";

import "google/protobuf/timestamp.proto";

// Сервис аутентификации
service AuthService {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  // Добавим методы для будущего расширения
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
}

// Запрос на регистрацию
message RegisterRequest {
  string email = 1;
  string password = 2;
  string first_name = 3;
  string surname = 4;
}

// Ответ на регистрацию
message RegisterResponse {
  int64 id = 1;
  string email = 2;
  string first_name = 3;
  string surname = 4;
  google.protobuf.Timestamp created_at = 5;
}

// Запрос на логин
message LoginRequest {
  string email = 1;
  string password = 2;
}

// Ответ на логин
message LoginResponse {
  string access_token = 1;
  string refresh_token = 2;
  google.protobuf.Timestamp expires_at = 3;
}

// Запрос на валидацию токена
message ValidateTokenRequest {
  string token = 1;
}

// Ответ на валидацию токена
message ValidateTokenResponse {
  bool valid = 1;
  string user_id = 2;
  string email = 3;
}

// Сообщения об ошибках
message ErrorResponse {
  string error = 1;
  ErrorCode code = 2;
}

enum ErrorCode {
  UNKNOWN = 0;
  VALIDATION_FAILED = 1;
  EMAIL_ALREADY_EXISTS = 2;
  PASSWORD_TOO_WEAK = 3;
  INVALID_CREDENTIALS = 4;
  INTERNAL_ERROR = 5;
}